# homelab

./: README.md
.github/workflows/: ci-metrics.yaml
esp32/thermal-collector/: README.md  platformio.ini
esp32/thermal-collector/lib/AppConfig/: AppConfig.cpp  AppConfig.h
esp32/thermal-collector/lib/MetricsClient/: MetricsClient.cpp  MetricsClient.h
esp32/thermal-collector/lib/NetworkService/: NetworkService.cpp  NetworkService.h
esp32/thermal-collector/lib/Types/: Types.h
esp32/thermal-collector/src/: main.cpp
rpi/infrastructure/docker/: compose.yaml
rpi/infrastructure/scripts/: migrate.sh
rpi/infrastructure/terraform/: .gitignore  README.md
rpi/infrastructure/terraform/environments/dev/: main.tf  variables.tf
rpi/infrastructure/terraform/global/: backend.tf  provider.tf
rpi/infrastructure/terraform/modules/artifact_registry/: main.tf  outputs.tf  variables.tf
rpi/services/database/: compose.yaml
rpi/services/metrics/: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  fastapi_logging.json  pyproject.toml
rpi/services/metrics/alembic/: env.py
rpi/services/metrics/alembic/versions/: 425475b86403_.py
rpi/services/metrics/app/: background.py  main.py  scheduler.py  webserver.py
rpi/services/metrics/app/api/: routes.py
rpi/services/metrics/app/core/: __init__.py  base_errors.py  base_sql_repository.py  logging.py  network_utils.py  settings.py
rpi/services/metrics/app/core/databases/postgres/: __init__.py
rpi/services/metrics/app/core/errors/: base.py
rpi/services/metrics/app/core/fastapi/: dependencies.py  http_exceptions.py
rpi/services/metrics/app/domains/device/: errors.py  models.py  repository.py  router.py  schemas.py  service.py
rpi/services/metrics/app/models/: __init__.py  base.py  base_sql.py
rpi/services/metrics/app/repositories/: base.py
rpi/services/metrics/app/schemas/: base.py
rpi/services/metrics/app/tasks/: device_discovery_task.py
rpi/services/metrics/tests/unit/: conftest.py  test_network_utils.py
rpi/services/metrics/tests/unit/device/: conftest.py  test_api.py  test_discovery_task.py  test_service.py
rpi/services/mqttbroker/: compose.yaml
