[tool.poetry]
name = "homelab-metrics-service"
version = "0.0.0"
description = ""
authors = ["y.blonski <yaraslau.blonski@gmail.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.3"
asyncpg = "^0.30.0"
fastapi = "^0.115.4"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"
loguru = "^0.7.2"

greenlet = "^3.1.1"
taskiq = "^0.11.7"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.2"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.27.0"
ruff = "^0.6.4"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "v$version"
version_files = ["pyproject.toml:^version"]
